--- a/App.xaml
+++ b/App.xaml
@@ -11,9 +11,10 @@
 <Application x:Class="WpfLearning.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Startup="Application_Startup">
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             xmlns:local="clr-namespace:WpfLearning"
+             StartupUri="Application_Startup">
     <Application.Resources>
-        
-
+        <sys:String x:Key="strApp">Hello Application!</sys:String>
     </Application.Resources>
 </Application>
